--- a/gb/22/10/13/n13844619.md
+++ b/gb/22/10/13/n13844619.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>英文大纪元视频特别节目揭美国边境危机真相</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2022/10/id13844621-GettyImages-1398586089-600x400.jpg" />
 <h6>美国边境巡逻队警告非法移民在炎热的夏季穿越边境，可能面临过境危险和死亡。(Mario Tama/Getty Images)
 </h6>
 <hr>
-	<p>【大纪元2022年10月13日讯】（英文大纪元记者Emily Allison撰文／曲志卓编译）<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%8B%B1%E6%96%87%E5%A4%A7%E7%BA%AA%E5%85%83%E8%A7%86%E9%A2%91.md#1">英文大纪元视频</a>（EpochTV）的一篇题为“边境欺骗：<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD.md#1">美国</a>和联合国如何悄悄地造成<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%BE%B9%E5%A2%83%E5%8D%B1%E6%9C%BA.md#1">边境危机</a>”（Border Deception: How the US and UN Are Quietly Running the Border Crisis）的特别报导揭露，在边境危机问题上，美国人民被欺骗了。</p>
-<p>在9月29日播出的这份报告中，《大纪元时报》的编辑兼高级调查记者、<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%8B%B1%E6%96%87%E5%A4%A7%E7%BA%AA%E5%85%83%E8%A7%86%E9%A2%91.md#1">英文大纪元视频</a>《<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8D%81%E5%AD%97%E8%B7%AF%E5%8F%A3.md#1">十字路口</a>》（Crossroads）节目主持人约书亚?菲利普（Joshua Philipp）揭露了<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD.md#1">美国</a>边境真正发生的令人震惊的细节。</p>
+	<p>【大纪元2022年10月13日讯】（英文大纪元记者Emily Allison撰文／曲志卓编译）英文大纪元视频（EpochTV）的一篇题为“边境欺骗：美国和联合国如何悄悄地造成边境危机”（Border Deception: How the US and UN Are Quietly Running the Border Crisis）的特别报导揭露，在边境危机问题上，美国人民被欺骗了。</p>
+<p>在9月29日播出的这份报告中，《大纪元时报》的编辑兼高级调查记者、英文大纪元视频《十字路口》（Crossroads）节目主持人约书亚?菲利普（Joshua Philipp）揭露了美国边境真正发生的令人震惊的细节。</p>
 <p>菲利普调查发现，“在外国政府的合作下，美国的资金以及由各种非政府组织和联合国实施的无孔不入的计划和有组织的行动，帮助非法移民通过中美洲和墨西哥，一步一步进入美国心脏地带。”</p>
 <p>菲利普的调查始于格兰德河口（the Rio Grande）。他采访了&#33879;名的战地记者迈克尔?扬（Michael Yon）。扬说，他一直在追踪世界各地的移民。许多移民必须通过卡特尔（cartels，贩毒集团）才能到达墨西哥，他们经常在危险的跋涉中跨越多个国家的边界。</p>
 <p>扬明确表示，人权危机是真实的。但是，危机的背后推手是否像许多人认为的那样是贩毒集团？由于移民之旅通常始于哥伦比亚和巴拿马，有时甚至更南端，很明显，每个国家的政府都参与了推动移民向北迁移。这是一项有组织的行动吗？动机是什么？</p>
@@ -19,7 +19,7 @@
 <p>但是，慈善团体如何承担如此高的成本呢？如果执法部门将移民转移到慈善机构，是否有法律协议？谁来买单？这是本地问题还是更大的问题？</p>
 <p>为了找到更多的答案，菲利普采访了德克萨斯州金尼县（Kinney County）的警长谢里夫?布拉德?科（Brad Coe）。科说，来自非法移民的犯罪，包括人口走私案件，每周都会占用他的全部人力。他的部门一直忙于抓捕非法移民，并将他们送上巴士运送到美国其它地区。非政府组织支付巴士的费用，但他对这些组织一无所知。</p>
 <h2>美国政府和联合国如何参与？</h2>
-<p>英文大纪元视频的这期节目特别采访了威斯康星州的国会议员汤姆?蒂芙尼（Tom Tiffany）。他一直在亲自调查<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%BE%B9%E5%A2%83%E5%8D%B1%E6%9C%BA.md#1">边境危机</a>。蒂芙尼指责联邦政府开展人口贩运活动。他解释说，乔?拜登总统就职后做的第一件事就是废除川普（特朗普）时代的“留在墨西哥”（remain in Mexico”）政策，继而开始所谓的“抓了就放”（catch and release），并结束了边境墙的建设。</p>
+<p>英文大纪元视频的这期节目特别采访了威斯康星州的国会议员汤姆?蒂芙尼（Tom Tiffany）。他一直在亲自调查边境危机。蒂芙尼指责联邦政府开展人口贩运活动。他解释说，乔?拜登总统就职后做的第一件事就是废除川普（特朗普）时代的“留在墨西哥”（remain in Mexico”）政策，继而开始所谓的“抓了就放”（catch and release），并结束了边境墙的建设。</p>
 <p>由于这些政策，数百万人非法越过边境。蒂芙尼说，很明显，美国政府在拜登政府的要求下，正在为非法移民提供便利。它的行为向世界其它国家发出了一个信号，给了非法移民一剂兴奋药，鼓励他们非法来到美国。</p>
 <p>蒂芙尼指出，美国政府和非政府组织协同行动，帮助移民从边境进入美国。他表示，一个外国团体（而不是美国政府）帮助非法移民在美国境内安家落户。</p>
 <p>该组织被称为“国际移民组织”（the International Organization for Migration，缩写为IOM），它是联合国的一部分。根据其网站，其大部分资金来自美国政府，美国国际开发署（the U.S Agency for International Development）的几个分支机构以及国务院。菲利普说，国际移民组织似乎直接与国务院合作。其纽约分部是该组织与国务院之间的联络处。</p>
@@ -42,45 +42,35 @@
 <p><em>本文仅代表作者本人的观点，不一定反映《大纪元时报》的立场。</em></p>
 <p>责任编辑：高静#</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/9/23/n13831013.md#1">纽约共和党要求霍楚宣布非法移民危机为“紧急状态”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/9/25/n13832416.md#1">【名家专栏】遣送非法移民到玛莎葡萄园不值庆祝</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/9/29/n13835090.md#1">报告：四分之一被释放非法移民未登记A号</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/10/8/n13841108.md#1">非法移民人数激增 纽约市长宣布进入紧急状态</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/9/23/n13831013.md#1">纽约共和党要求霍楚宣布非法移民危机为“紧急状态”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/9/25/n13832416.md#1">【名家专栏】遣送非法移民到玛莎葡萄园不值庆祝</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/9/29/n13835090.md#1">报告：四分之一被释放非法移民未登记A号</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/10/8/n13841108.md#1">非法移民人数激增 纽约市长宣布进入紧急状态</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/11/n11180153.md#1" target="_blank">【征文】章阁：中国古代专制吗（上）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/14/9/25/n4257161.md#1" target="_blank">慧真：世纪谎言  自焚伪案</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/23/n12707407.md#1" target="_blank">闻欣：钱学森为何拒绝反对法轮功？</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/22/n10079307.md#1" target="_blank">林辉：周恩来主任秘书自杀 亲戚文革遭殃</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/4/7/n10284039.md#1" target="_blank">中国良心教师们的故事（1）</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062287.md#1">【古道人生】两人为躲债藏山洞 结果都把债还了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/15/n14074103.md#1">【未解之谜】“雷暴哮喘” 《推背图》中的秘密？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/14/n14073883.md#1">医院放弃治疗 植物人神奇被唤醒</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/17/n14075338.md#1">女子濒死见到已故亲人 上帝要她带话回人间</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/18/n14076236.md#1">【未解之谜】《推背图》46象 即将应验的预言？！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/19/n14076769.md#1">【中国禁闻】惧朝俄关系升温? 王毅匆忙访俄</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/20/n14078054.md#1">【菁英论坛】中共无牌可打 对美示弱不可避免</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/11/n14071662.md#1">【思想领袖】为孩子的成长负责 抵制觉醒主义</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/19/n14076744.md#1">【中国观察】李尚福到底因何激怒习近平？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/18/n14076307.md#1">分析：习政权命悬一线 王毅会沙利文求和？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/19/n14076537.md#1">沈舟：山东号政治性演训 美军看笑话</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/17/n14075690.md#1">李易峰因嫖娼遭封杀一年 疑似复出直播遭举报</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/18/n14076481.md#1">与日武打女星武田梨奈聚会 洪金宝暴瘦照曝光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/17/n14075660.md#1">袁冰妍被点名偷漏税 微博遭禁 电视台急切割</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/19/n14077071.md#1">儿时曾反串饰演男孩 徐娇官宣回归周星驰公司</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/19/n14077157.md#1">惊闻周杰伦天津开唱出意外 昆凌曝曾火速探视</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/18/n14076055.md#1">医生提出警告 不要和小狗同床而睡</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/14/n14073756.md#1">研究：高脂肪早餐可提升晚期肺癌药疗效</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065005.md#1">拯救视力勿乱点药水 中医教你1分钟养眼 效果最佳</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/13/n14072643.md#1">补错得肾结石？医师告诉你钙镁、维生素D补充比例</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/19/n14076688.md#1">专家说 你这样拿笔电就错了</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/17/n14272135.md#1">长大的女孩：法度加入神韵的故事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/14/n14269975.md#1">【未解之谜】揭秘1996年巴西UFO坠毁事件（下）医院惊魂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/11/n14268258.md#1">【古道人生】地师为富家卜穴 为何最终给了佃户之子？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/17/n14272001.md#1">【未解之谜】细思极恐 AI接管人类倒计时？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/10/n14267444.md#1">德不配位必有危 宝马也需有德人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/4/23/n14232452.md#1">【古韵流芳】闺阁世界的奇伟之才——沈善宝</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273708.md#1">【时事金扫描】乌军攻克里米亚？普京访朝异常</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/15/n14270972.md#1">【百年真相】中共一再被俄总统普京打脸</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/18/n14272757.md#1">中国富豪流失全球居首 大多移民哪四国</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/18/n14272482.md#1">三中全会前要全党噤声 分析指中共岌岌可危</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/17/n14272172.md#1">宣传片被拍得脸歪嘴斜 胡歌不禁公开吐槽</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/17/n14272141.md#1">甄子丹动作替身张磊因心脏病猝逝 终年39岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/17/n14272210.md#1">安洁莉娜裘莉盛装走红毯 15岁小女儿紧相随</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/18/n14272917.md#1">陆第一网红冯提莫癌症痊愈 自曝还有5种病</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273702.md#1">演唱会被投诉唱粤语歌 张学友：我来自香港</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/17/n14271835.md#1">这一物可以让脏袜子变白 非白醋或小苏打粉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/18/n14272483.md#1">日本作家谈文化差异 一个地名让台湾人笑翻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273234.md#1">人死时大脑会发生什么事？ 医生这么说</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/15/n14271007.md#1">桑叶茶是长寿茶 清肺祛肝火 3类人不宜多喝</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/16/n14271291.md#1">长时间戴降噪和无线耳机 是如何损害听力的</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/10/13/n13844619.htm">英文大纪元视频特别节目揭美国边境危机真相</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/22/10/13/n13844619.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/10/13/n13844619.htm">英文大纪元视频特别节目揭美国边境危机真相</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/22/10/13/n13844619.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
